01_introduction_to_transformers.ipynb

--- a/notebooks/01_introduction_to_transformers.ipynb
+++ b/notebooks/01_introduction_to_transformers.ipynb
@@ -58,7 +58,7 @@
     "-   **Encoder-Decoder Attention**\n",
     "-   **Feed-Forward Layer**\n",
     "\n",
-    "![Multi-Head Attention](https://jalammar.github.io/images/t/multi-head-attention.png)\n",
+    "![Multi-Head Attention](https://media.datacamp.com/legacy/v1704797299/image_542a27c68b.png)\n",
     "*Figure: Multi-head Attention explained*\n",
     "\n",
     "Positional Encoding\n",
@@ -67,7 +67,7 @@
     "Transformers don’t use recurrence or convolutions, so they lack inherent word order.\n",
     "To solve this, we add **Positional Encodings**.\n",
     "\n",
-    "![Positional Encoding](https://jalammar.github.io/images/t/transformer_positional_encoding.png)\n",
+    "![Positional Encoding](https://media.datacamp.com/cms/google/aa6uuy3t-iknfuwcguorfwsud60oza4ptjuotfmk0ce1p1pp_o-dr0k8dxqubp4xfk7yme8vx3tlliorja-afownqyoeggkxey3nv0arqyrwnwpeqzyx0dsyavjdodgysmonaxryhwcqf0b-in1zkki.png)\n",
     "*Figure: Positional encoding visualized as sinusoidal functions*\n",
     "\n",
     "Simplified Example (Pseudo-code)\n",
