01_introduction_to_transformers.ipynb

--- a/notebooks/01_introduction_to_transformers.ipynb
+++ b/notebooks/01_introduction_to_transformers.ipynb
@@ -20,7 +20,7 @@
     "previous models like RNNs and CNNs, the Transformer relies entirely on\n",
     "attention mechanisms, removing the need for recurrence or convolutions.\n",
     "\n",
-    "![Transformer Architecture](https://jalammar.github.io/images/t/transformer_architecture.png)\n",
+    "![Transformer Architecture](https://media.datacamp.com/legacy/v1704797298/image_7b08f474e7.png)\n",
     "*Figure: General Transformer Architecture (Source: Jalammar)*\n",
     "\n",
     "Why Are Transformers Important?\n",
@@ -46,10 +46,7 @@
     "Each encoder block has:\n",
     "-   **Multi-head Self-Attention**\n",
     "-   **Feed-Forward Neural Network**\n",
-    "\n",
-    "![Self-Attention](https://jalammar.github.io/images/t/self-attention.png)\n",
-    "*Figure: Scaled Dot-Product Self-Attention*\n",
-    "\n",
+
     "Decoder Blocks\n",
     "--------------\n",
     "\n",
@@ -58,7 +55,7 @@
     "-   **Encoder-Decoder Attention**\n",
     "-   **Feed-Forward Layer**\n",
     "\n",
-    "![Multi-Head Attention](https://media.datacamp.com/legacy/v1704797299/image_542a27c68b.png)\n",
+    "![Multi-Head Attention](https://media.datacamp.com/cms/google/82s2vzpkd8l-bvn5nzlyol98qr7yjcmieudlmn5qvgnofxo4eajw_vpvx-suwmitx4yiebkhyzztq6vmw15j_so_-xiwvc5_d76irx1hlhky4giknbx2pff9rxydcuv3akzvwhl-pvyn7b7eszul9n4.png)\n",
     "*Figure: Multi-head Attention explained*\n",
     "\n",
     "Positional Encoding\n",
@@ -78,8 +75,58 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "# Code remains unchanged\n",
-    "..."
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class PositionalEncoding(nn.Module):\n",
+    "    def __init__(self, d_model, max_len=5000):\n",
+    "        super(PositionalEncoding, self).__init__()\n",
+    "        pe = torch.zeros(max_len, d_model)\n",
+    "        position = torch.arange(0, max_len, dtype=torch.float).unsqueeze(1)\n",
+    "        div_term = torch.exp(torch.arange(0, d_model, 2).float() * (-torch.log(torch.tensor(10000.0)) / d_model))\n",
+    "        pe[:, 0::2] = torch.sin(position * div_term)\n",
+    "        pe[:, 1::2] = torch.cos(position * div_term)\n",
+    "        pe = pe.unsqueeze(0).transpose(0, 1)\n",
+    "        self.register_buffer('pe', pe)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return x + self.pe[:x.size(0), :]\n",
+    "\n",
+    "class SimpleEncoderLayer(nn.Module):\n",
+    "    def __init__(self, d_model, num_heads, dim_feedforward, dropout):\n",
+    "        super(SimpleEncoderLayer, self).__init__()\n",
+    "        self.self_attn = nn.MultiheadAttention(d_model, num_heads, dropout=dropout)\n",
+    "        self.linear1 = nn.Linear(d_model, dim_feedforward)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.linear2 = nn.Linear(dim_feedforward, d_model)\n",
+    "        self.norm1 = nn.LayerNorm(d_model)\n",
+    "        self.norm2 = nn.LayerNorm(d_model)\n",
+    "        self.dropout1 = nn.Dropout(dropout)\n",
+    "        self.dropout2 = nn.Dropout(dropout)\n",
+    "\n",
+    "    def forward(self, src, src_mask=None, src_key_padding_mask=None):\n",
+    "        src2 = self.self_attn(src, src, src, attn_mask=src_mask, key_padding_mask=src_key_padding_mask)[0]\n",
+    "        src = src + self.dropout1(src2)\n",
+    "        src = self.norm1(src)\n",
+    "        src2 = self.linear2(self.dropout(torch.relu(self.linear1(src))))\n",
+    "        src = src + self.dropout2(src2)\n",
+    "        src = self.norm2(src)\n",
+    "        return src\n",
+    "\n",
+    "d_model = 512\n",
+    "num_heads = 8\n",
+    "dim_feedforward = 2048\n",
+    "dropout = 0.1\n",
+    "\n",
+    "encoder_layer = SimpleEncoderLayer(d_model, num_heads, dim_feedforward, dropout)\n",
+    "pos_encoder = PositionalEncoding(d_model)\n",
+    "\n",
+    "input_sequence = torch.rand(10, 2, d_model)\n",
+    "input_with_pos = pos_encoder(input_sequence)\n",
+    "output = encoder_layer(input_with_pos)\n",
+    "\n",
+    "print(f\"Input shape: {input_sequence.shape}\")\n",
+    "print(f\"Encoder output shape: {output.shape}\")"
    ]
   },
   {
