01_introduction_to_transformers.ipynb

--- a/notebooks/01_introduction_to_transformers.ipynb
+++ b/notebooks/01_introduction_to_transformers.ipynb
@@ -37,7 +37,7 @@
     "1.  **Encoder**: Processes the input and builds a contextual representation.\n",
     "2.  **Decoder**: Uses the encoder output to generate the final sequence.\n",
     "\n",
-    "![Encoder Decoder](https://jalammar.github.io/images/t/transformer_encoder_decoder.png)\n",
+    "![Encoder Decoder](https://media.datacamp.com/legacy/v1704797298/image_3aa5aef3db.png)\n",
     "*Figure: Encoder and Decoder structure*\n",
     "\n",
     "Encoder Blocks\n",
