--- a/notebooks/02_attention_mechanism_explained.ipynb
+++ b/notebooks/02_attention_mechanism_explained.ipynb
@@ -1,137 +1,140 @@
-# The Attention Mechanism
-=========================
-
-Welcome to the second notebook of the “Transformers Explained” series!  
-In this notebook, we will dive deep into the core of Transformer architecture: the attention mechanism, and more specifically, **self-attention**.
-
----
-
-## What is Attention?
----------------------
-
-In neural networks, **attention** is a mechanism that allows the model to weigh the importance of different parts of the input (or output) sequence during prediction.  
-This enables the model to **focus on the most relevant information** instead of treating all words equally.
-
-
-
----
-
-## Self-Attention
------------------
-
-**Self-attention** is a type of attention where the model learns to weigh the relationships between different positions within the **same input sequence**.  
-In other words, **each word in a sentence can look at the other words** to better understand its own meaning.
-
-
-
----
-
-### How Does Self-Attention Work?
-
-The self-attention mechanism computes **three vectors** for each input word:
-
-1. **Query (Q)** – What the word is looking for  
-2. **Key (K)** – What the word offers  
-3. **Value (V)** – The actual content of the word
-
-The steps are:
-
-1. **Compute similarity scores** between the query and all keys using dot product  
-2. **Scale** the scores by \(\sqrt{d_k}\)  
-3. **Apply softmax** to get attention weights  
-4. **Weight values** by multiplying each Value by the corresponding attention weight  
-5. **Sum weighted values** to get the final output vector for each word
-
----
-
-### Self-Attention Formula
-
-\[
-\text{Attention}(Q, K, V) = \text{softmax}\left( \frac{QK^T}{\sqrt{d_k}} \right) V
-\]
-
-Where:
-- \( Q \): query matrix  
-- \( K \): key matrix  
-- \( V \): value matrix  
-- \( d_k \): dimensionality of the keys
-
----
-
-## Multi-Head Attention
-------------------------
-
-**Multi-head attention** is an extension of self-attention.  
-Instead of performing one attention calculation, the model performs **multiple attention operations in parallel**, known as "heads".  
-Their outputs are concatenated and passed through a linear transformation.
-
-This allows the model to focus on **different types of relationships** simultaneously.
-
-
----
-
-## Simplified Example (Code)
-----------------------------
-
-```python
-import torch
-import torch.nn as nn
-import math
-
-class SelfAttention(nn.Module):
-    def __init__(self, embed_size, heads):
-        super(SelfAttention, self).__init__()
-        self.embed_size = embed_size
-        self.heads = heads
-        self.head_dim = embed_size // heads
-
-        assert self.head_dim * heads == embed_size, "Embedding size must be divisible by number of heads"
-
-        self.values = nn.Linear(self.head_dim, self.head_dim, bias=False)
-        self.keys = nn.Linear(self.head_dim, self.head_dim, bias=False)
-        self.queries = nn.Linear(self.head_dim, self.head_dim, bias=False)
-        self.fc_out = nn.Linear(heads * self.head_dim, embed_size)
-
-    def forward(self, values, keys, query, mask):
-        N = query.shape[0]  # Batch size
-        value_len, key_len, query_len = values.shape[1], keys.shape[1], query.shape[1]
-
-        # Split embeddings into multiple heads
-        values = values.reshape(N, value_len, self.heads, self.head_dim)
-        keys = keys.reshape(N, key_len, self.heads, self.head_dim)
-        queries = query.reshape(N, query_len, self.heads, self.head_dim)
-
-        values = self.values(values)
-        keys = self.keys(keys)
-        queries = self.queries(queries)
-
-        # Dot product attention
-        energy = torch.einsum("nqhd,nkhd->nkhq", [queries, keys])
-
-        if mask is not None:
-            energy = energy.masked_fill(mask == 0, float("-1e20"))
-
-        attention = torch.softmax(energy / math.sqrt(self.head_dim), dim=3)
-
-        out = torch.einsum("nkhq,nvhd->nqhd", [attention, values])
-        out = out.reshape(N, query_len, self.heads * self.head_dim)
-
-        return self.fc_out(out)
-
-# Model configuration
-embed_size = 256
-heads = 8
-sequence_length = 10
-batch_size = 2
-
-# Self-Attention layer
-attention_layer = SelfAttention(embed_size, heads)
-
-# Example input
-input_data = torch.rand(batch_size, sequence_length, embed_size)
-
-# Apply self-attention
-output = attention_layer(input_data, input_data, input_data, mask=None)
-
-print(f"Input shape: {input_data.shape}")
-print(f"Output shape: {output.shape}")
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Attention Mechanism\n",
+    "\n",
+    "Welcome to the second notebook in the “Transformers Explained” series! In this notebook, we dive into the core of Transformer architecture: the attention mechanism, especially self-attention.\n",
+    "\n",
+    "## What is Attention?\n",
+    "\n",
+    "In neural networks, attention is a mechanism that allows the model to weigh the importance of different parts of the input (or output) sequence when making a prediction. This enables the model to focus on the most relevant parts instead of treating everything equally.\n",
+    "\n",
+    "![Attention Mechanism](https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Attention-mechanism-01.svg/1280px-Attention-mechanism-01.svg.png)\n",
+    "\n",
+    "## Self-Attention\n",
+    "\n",
+    "Self-attention is a type of attention where the model learns the relationships between different positions in the *same* sequence. This means each word can \"look at\" other words in the sentence to better understand its context.\n",
+    "\n",
+    "### How does it work?\n",
+    "\n",
+    "Self-attention computes three vectors for each input word:\n",
+    "\n",
+    "1. **Query (Q)** – What the word is looking for.\n",
+    "2. **Key (K)** – What the word offers.\n",
+    "3. **Value (V)** – The actual content.\n",
+    "\n",
+    "The steps of self-attention are:\n",
+    "\n",
+    "1. **Compute similarity scores** between Query and all Keys (dot product).\n",
+    "2. **Scale** the scores by \\( \\sqrt{d_k} \\).\n",
+    "3. **Apply softmax** to get attention weights.\n",
+    "4. **Weight the Values** using the attention weights to get the output.\n",
+    "\n",
+    "### Formula\n",
+    "\n",
+    "$$ Attention(Q, K, V) = softmax\\left(\\frac{QK^T}{\\sqrt{d_k}}\\right)V $$\n",
+    "\n",
+    "Where:\n",
+    "- \\( Q \\): Query matrix\n",
+    "- \\( K \\): Key matrix\n",
+    "- \\( V \\): Value matrix\n",
+    "- \\( d_k \\): Key dimension\n",
+    "\n",
+    "![Self Attention](https://upload.wikimedia.org/wikipedia/commons/9/96/TransformerSelfAttention.png)\n",
+    "\n",
+    "## Multi-Head Self-Attention\n",
+    "\n",
+    "Multi-head self-attention performs multiple attention operations in parallel (called “heads”). Their results are concatenated and linearly transformed. This allows the model to capture different types of relationships simultaneously.\n",
+    "\n",
+    "![Multi-Head Attention](https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Transformer_Multi-Head_Attention.svg/1920px-Transformer_Multi-Head_Attention.svg.png)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import math\n",
+    "\n",
+    "class SelfAttention(nn.Module):\n",
+    "    def __init__(self, embed_size, heads):\n",
+    "        super(SelfAttention, self).__init__()\n",
+    "        self.embed_size = embed_size\n",
+    "        self.heads = heads\n",
+    "        self.head_dim = embed_size // heads\n",
+    "\n",
+    "        assert self.head_dim * heads == embed_size, \"Embed size must be divisible by number of heads\"\n",
+    "\n",
+    "        self.values = nn.Linear(self.head_dim, self.head_dim, bias=False)\n",
+    "        self.keys = nn.Linear(self.head_dim, self.head_dim, bias=False)\n",
+    "        self.queries = nn.Linear(self.head_dim, self.head_dim, bias=False)\n",
+    "        self.fc_out = nn.Linear(heads * self.head_dim, embed_size)\n",
+    "\n",
+    "    def forward(self, values, keys, query, mask=None):\n",
+    "        N = query.shape[0]\n",
+    "        value_len, key_len, query_len = values.shape[1], keys.shape[1], query.shape[1]\n",
+    "\n",
+    "        values = values.reshape(N, value_len, self.heads, self.head_dim)\n",
+    "        keys = keys.reshape(N, key_len, self.heads, self.head_dim)\n",
+    "        queries = query.reshape(N, query_len, self.heads, self.head_dim)\n",
+    "\n",
+    "        values = self.values(values)\n",
+    "        keys = self.keys(keys)\n",
+    "        queries = self.queries(queries)\n",
+    "\n",
+    "        energy = torch.einsum(\"nqhd,nkhd->nhqk\", [queries, keys])\n",
+    "\n",
+    "        if mask is not None:\n",
+    "            energy = energy.masked_fill(mask == 0, float(\"-1e20\"))\n",
+    "\n",
+    "        attention = torch.softmax(energy / math.sqrt(self.head_dim), dim=-1)\n",
+    "        out = torch.einsum(\"nhqk,nkhd->nqhd\", [attention, values])\n",
+    "        out = out.reshape(N, query_len, self.heads * self.head_dim)\n",
+    "        return self.fc_out(out)\n",
+    "\n",
+    "# Parameters\n",
+    "embed_size = 256\n",
+    "heads = 8\n",
+    "sequence_length = 10\n",
+    "batch_size = 2\n",
+    "\n",
+    "attention_layer = SelfAttention(embed_size, heads)\n",
+    "input_data = torch.rand(batch_size, sequence_length, embed_size)\n",
+    "output = attention_layer(input_data, input_data, input_data)\n",
+    "\n",
+    "print(f\"Input shape: {input_data.shape}\")\n",
+    "print(f\"Output shape: {output.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "The attention mechanism is the foundation of Transformers. It enables non-sequential processing and captures complex dependencies. Multi-head self-attention further enhances this by allowing the model to focus on multiple relationships in parallel.\n",
+    "\n",
+    "In the next notebook, we’ll use these concepts to build a Transformer from scratch."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
